--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link rel="stylesheet" href="css/index.css"> 
+    <link rel="stylesheet" href="css/selection.css">
+    <link rel="stylesheet" href="css/button.css">
+    <link rel="stylesheet" href="css/select_box.css">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
   </head>
   <body class="sans-serif">
@@ -28,19 +31,214 @@
                     <p class="f3 mt1 mb1">
                         <span class="f5 ">Original Sentence (Human Written):</span>
                     </p>
-                    <div class="f4 lh-copy" v-html="original_html"></div>
+                    <component :is="compiled_original_html"></component>
+                    <!-- <div class="f4 lh-copy" v-html="original_html"></div> -->
                     <p class="f3 mb1">
                         <span class="f5">Simplified Sentence (Human or AI Model Written):</span>
                     </p>
-                    <div class="f4 mb2 lh-copy" v-html="simplified_html"></div>
+                    <component :is="compiled_simplified_html"></component>
+                    <!-- <div class="f4 mb2 lh-copy" v-html="simplified_html"></div> -->
                 </div>
             </div>
             <div class="mt1">
-                <p class="f4 courier ttu">Edits Annotations:</p>
-                <div class="f4 lh-copy" v-html="edits_html"></div>
+                <p class="f3 courier ttu">Edits Annotations</p>
+                <component :is="compiled_edits_html"></component>
+                <!-- <div class="f4 lh-copy" v-html="edits_html"></div> -->
             </div>
         </section>
-      </div>
+        <div class="quality-selection ba br3 bw1" data-category="deletion">
+          <i class="fa fa-close" id="close-icon"></i>
+          <div class="f4 mt0 mb2 tc">
+            Edit:
+            <span class="edit-type txt-deletion f3">delete </span>
+            <span class="pa1 edit-text br-pill-ns border-deletion-all deletion_below txt-deletion" data-id="deletion-0" data-category="deletion">&nbsp;the Gospel of Luke, specifically -.&nbsp;</span>
+          </div>
+          
+          <!-- <input type="text" id="text_input" name="quality" placeholder="type your problem"> -->
+          <div id="dropdown-button-container">
+              <div class="single_part section over-hide z-bigger" id="severity_div">
+                  <div class="row">
+                      <p class="radio-instruction mb2 b">How much information is removed?</i>
+                      </p>
+                      <div>
+                          <div class="column-severity">
+                              <input class="checkbox-tools-severity checkbox-tools" type="radio" name="severity"
+                                  id="severity-1" value="1">
+                              <label class="b for-checkbox-tools-severity" for="severity-1" id="severity-1-label">
+                                  1 - Very little
+                              </label>
+                          </div>
+                          <div class="column-severity">
+                              <input class="checkbox-tools-severity checkbox-tools" type="radio" name="severity"
+                                  id="severity-2" value="2">
+                              <label class="b for-checkbox-tools-severity" for="severity-2" id="severity-2-label">
+                                  2 - Some information
+                              </label>
+                          </div>
+                          <div class="column-severity">
+                              <input class="checkbox-tools-severity checkbox-tools" type="radio" name="severity"
+                                  id="severity-3" value="3">
+                              <label class="b for-checkbox-tools-severity" for="severity-3" id="severity-3-label">
+                                  3 - A lot and the main idea is changed
+                              </label>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <!-- <div class="single_part" id="explanation_div">
+                <p class="b mb2">Explain your selection.</p>
+                <textarea id="explanation" name="explanation" placeholder="Please write down your explanation!"
+                    rows="4" style="width: 100%; resize: none; overflow-y: hidden;"></textarea>
+              </div> -->
+              <!-- disable  -->
+              <div class="buttons" id="button_div">
+                  <!-- <input type="button" id="clear_button" class="clear quality_button" value="Clear"> -->
+                  <button id="confirm_button" class="b confirm quality_button btn" type="button">Confirm</button>
+              </div>
+            </div>
+        </div>
+
+        <div class="quality-selection ba br3 bw1">
+        <i class="fa fa-close" id="close-icon"></i>
+        <p id="selection_text" class="selection_text"></p>
+        <!-- <input type="text" id="text_input" name="quality" placeholder="type your problem"> -->
+        <div id="dropdown-button-container">
+            <!-- <input class="checkbox" type="checkbox" name="general" id="general">
+            <label class="for-checkbox" for="general"></label> -->
+            <div class="single_part section over-hide z-bigger">
+                <p class="b mb2">Select the error.</p>
+                <div class="quality_selection_container">
+                    <div class="f6 mb2 float-l">Reader</div>
+                    <div class="f6 mb2 float-l">Factual</div>
+                    <div class="row">
+                        <div class="column">
+                            <input class="checkbox-tools antecedent_no_able" type="radio" name="error_type"
+                                id="error-5" value="Needs_Google">
+                            <label class="b for-checkbox-tools" for="error-5" id="error-5-label">
+                                Needs Google
+                            </label>
+                        </div>
+                        <div class="column">
+                            <input class="checkbox-tools antecedent_no_able" type="radio" name="error_type"
+                                id="error-1" value="Technical_Jargon">
+                            <label class="b for-checkbox-tools" for="error-1" id="error-1-label">
+                                Technical Jargon
+                            </label>
+                        </div>
+                        <div class="column">
+                            <input class="checkbox-tools antecedent_no_able" type="radio" name="error_type"
+                                id="error-2" value="Bad_Math">
+                            <label class="b for-checkbox-tools" for="error-2" id="error-2-label">
+                                Bad Math
+                            </label>
+                        </div>
+                        <div class="column">
+                            <input class="checkbox-tools antecedent_no_able" type="radio" name="error_type"
+                                id="error-3" value="Encyclopedic">
+                            <label class="b for-checkbox-tools" for="error-3" id="error-3-label">
+                                Wrong: Encyclopedic
+                            </label>
+                        </div>
+                        <div class="column">
+                            <input class="checkbox-tools antecedent_no_able" type="radio" name="error_type"
+                                id="error-4" value="Commonsense">
+                            <label class="b for-checkbox-tools" for="error-4" id="error-4-label">
+                                Wrong: Commonsense
+                            </label>
+                        </div>
+                    </div>
+                    <p class="f6 mb2">Language</p>
+                    <div class="row">
+                        <div class="column">
+                            <input class="checkbox-tools antecedent_no_able" type="radio" name="error_type"
+                                id="error-6" value="Grammar_Usage">
+                            <label class="b for-checkbox-tools" for="error-6" id="error-6-label">
+                                Grammar / Usage
+                            </label>
+                        </div>
+                        <div class="column">
+                            <input class="checkbox-tools antecedent_no_able" type="radio" name="error_type"
+                                id="error-7" value="Off-prompt">
+                            <label class="b for-checkbox-tools" for="error-7" id="error-7-label">
+                                Off-prompt
+                            </label>
+                        </div>
+                        <div class="column">
+                            <input class="checkbox-tools antecedent_able" type="radio" name="error_type"
+                                id="error-8" value="Redundant">
+                            <label class="b for-checkbox-tools" for="error-8" id="error-8-label">
+                                Redundant
+                            </label>
+                        </div>
+                        <div class="column">
+                            <input class="checkbox-tools antecedent_able" type="radio" name="error_type"
+                                id="error-9" value="Self-contradiction">
+                            <label class="b for-checkbox-tools" for="error-9" id="error-9-label">
+                                Self-contradiction
+                            </label>
+                        </div>
+                        <div class="column">
+                            <input class="checkbox-tools antecedent_no_able" type="radio" name="error_type"
+                                id="error-10" value="Incoherent">
+                            <label class="b for-checkbox-tools" for="error-10" id="error-10-label">
+                                Incoherent
+                            </label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="single_part" id="antecedent_selection" style="display:none;">
+                <p id="antecedent_select_text" class="b mb2">Select the antecedent.</p>
+                <p id="selection_antecedent" class="selection_text">Selected antecedents: </p>
+            </div>
+            <!-- <div class="form__group field">
+            <input type="text" class="form__field" placeholder="Explanation" name="explanation" id='explanation'/>
+            <label for="explanation" class="form__label">Explanation *</label>
+        </div> -->
+            <div class="disable single_part" id="explanation_div">
+                <p class="b mb2">Explain your selection.</p>
+                <textarea id="explanation" name="explanation" placeholder="Please write down your explanation!"
+                    rows="4" style="width: 100%; resize: none; overflow-y: hidden;"></textarea>
+            </div>
+
+
+            <div class="disable single_part section over-hide z-bigger" id="severity_div">
+                <div>
+                    <p class="radio-instruction mb2 b">Select the severity <i>(how severe is this error?).</i>
+                    </p>
+                    <div>
+                        <div class="column-severity">
+                            <input class="checkbox-tools-severity checkbox-tools" type="radio" name="severity"
+                                id="severity-1" value="1">
+                            <label class="b for-checkbox-tools-severity" for="severity-1" id="severity-1-label">
+                                1 - Almost no impact
+                            </label>
+                        </div>
+                        <div class="column-severity">
+                            <input class="checkbox-tools-severity checkbox-tools" type="radio" name="severity"
+                                id="severity-2" value="2">
+                            <label class="b for-checkbox-tools-severity" for="severity-2" id="severity-2-label">
+                                2 - Understandable, but difficult
+                            </label>
+                        </div>
+                        <div class="column-severity">
+                            <input class="checkbox-tools-severity checkbox-tools" type="radio" name="severity"
+                                id="severity-3" value="3">
+                            <label class="b for-checkbox-tools-severity" for="severity-3" id="severity-3-label">
+                                3 - Very hard to understand
+                            </label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="disable buttons" id="button_div">
+                <!-- <input type="button" id="clear_button" class="clear quality_button" value="Clear"> -->
+                <button id="confirm_button" class="b confirm quality_button btn" type="button">Confirm</button>
+            </div>
+        </div>
+        </div>
+    </div>
     <script src="./js/index.js"></script>
   </body>
 </html>
