--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="quality-selection-divs">
-                <div class="quality-selection active w-100">
+                <div class="quality-selection w-100" id="add_an_edit">
                     <p class="f3 courier ttu mv1">Adding an Edit <i class="fa-solid fa-plus"></i></p>
         
                     <!-- <input type="text" id="text_input" name="quality" placeholder="type your problem"> -->
@@ -123,9 +123,9 @@
                             rows="4" style="width: 100%; resize: none; overflow-y: hidden;"></textarea>
                       </div> -->
                         <!-- disable  -->
-                        <div class="buttons tc" id="button_div">
+                        <div class="buttons tc mt2">
                             <button @click="cancel_click" class="cancel-button b quality_button bw0 ba mr2 br-pill-ns grow" type="button">Cancel <i class="fa-solid fa-close"></i></button>
-                            <button class="confirm-button b quality_button bw0 ba ml2 br-pill-ns grow" type="button">Save <i class="fa-solid fa-check"></i></button>
+                            <button @click="save_click" class="confirm-button b quality_button bw0 ba ml2 br-pill-ns grow" type="button">Save <i class="fa-solid fa-check"></i></button>
                         </div>
                     </div>
                 </div>
@@ -136,7 +136,7 @@
                         Edit:
                         <span class="edit-type txt-deletion f3">delete </span>
                         <span class="pa1 edit-text br-pill-ns border-deletion-all deletion_below txt-deletion"
-                            data-id="deletion-0" data-category="deletion">&nbsp;the Gospel of Luke, specifically -.&nbsp;</span>
+                            data-id="deletion-0" data-category="deletion">&nbsp;{{annotating_edit_span_in_original}}&nbsp;</span>
                     </div>
         
                     <!-- <input type="text" id="text_input" name="quality" placeholder="type your problem"> -->
@@ -147,27 +147,37 @@
                                 </p>
                                 <div class="tc">
                                     <div class="column-severity">
-                                        <input class="checkbox-tools-severity checkbox-tools" type="radio" name="severity"
-                                            id="severity-1" value="1">
+                                        <input class="checkbox-tools checkbox-tools-severity " type="radio" name="severity"
+                                            id="severity-1" value="good">
                                         <label class="b for-checkbox-tools-severity" for="severity-1" id="severity-1-label">
                                             1 - Very little
                                         </label>
                                     </div>
                                     <div class="column-severity">
-                                        <input class="checkbox-tools-severity checkbox-tools" type="radio" name="severity"
-                                            id="severity-2" value="2">
+                                        <input class="checkbox-tools checkbox-tools-severity " type="radio" name="severity"
+                                            id="severity-2" value="somewhat">
                                         <label class="b for-checkbox-tools-severity" for="severity-2" id="severity-2-label">
                                             2 - Some information
                                         </label>
                                     </div>
                                     <div class="column-severity">
-                                        <input class="checkbox-tools-severity checkbox-tools" type="radio" name="severity"
-                                            id="severity-3" value="3">
+                                        <input class="checkbox-tools checkbox-tools-severity " type="radio" name="severity"
+                                            id="severity-3" value="bad">
                                         <label class="b for-checkbox-tools-severity" for="severity-3" id="severity-3-label">
                                             3 - A lot and the main idea is changed
                                         </label>
                                     </div>
                                 </div>
+                                <p class="mb2 b tracked-light">Does this deletion introduce any fluency / grammar error?
+                                    <input class="checkbox-tools-yes-no" type="radio" name="deletion-yes-no"
+                                        id="deletion-yes" value="yes">
+                                    <label class="b for-checkbox-tools-yes-no" for="deletion-yes">yes</label>
+                                    <input class="checkbox-tools-yes-no" type="radio" name="deletion-yes-no"
+                                        id="deletion-no" value="no">
+                                    <label class="b for-checkbox-tools-yes-no" for="deletion-no">
+                                        no
+                                    </label>
+                                </p>
                             </div>
                         </div>
                         <!-- <div class="single_part" id="explanation_div">
@@ -176,9 +186,9 @@
                             rows="4" style="width: 100%; resize: none; overflow-y: hidden;"></textarea>
                       </div> -->
                         <!-- disable  -->
-                        <div class="buttons tc" id="button_div">
+                        <div class="buttons tc mt2">
                             <button @click="cancel_click" class="cancel-button b quality_button bw0 ba mr2 br-pill-ns grow" type="button">Cancel <i class="fa-solid fa-close"></i></button>
-                            <button class="confirm-button b quality_button bw0 ba ml2 br-pill-ns grow" type="button">Save <i class="fa-solid fa-check"></i></button>
+                            <button @click="save_deletion_anntotation_click" class="confirm-button b quality_button bw0 ba ml2 br-pill-ns grow" type="button">Save <i class="fa-solid fa-check"></i></button>
                         </div>
                     </div>
                 </div>
@@ -338,7 +348,7 @@
                 </div>
                 <div class="fl w-20 tc">
                     <!-- <p class="f3 courier ttu">Operations</p> -->
-                    <p class="add_button pa2 br-pill-ns ba bw1">
+                    <p @click="add_an_edit" class="add_button pa2 br-pill-ns ba bw1 grow">
                         <i class="fa-solid fa-plus fa-1-5x icon-default pointer mr2"></i>
                         <span class="f4">Add Edit</span>
                     </p>
