--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                 </div>
 
 
-                <div class="quality-selection w-100 active" data-category="insertion">
+                <div class="quality-selection w-100" data-category="insertion">
                     <p class="f3 courier ttu mv1">Annotating an Edit <i class="fa-solid fa-pencil"></i></p>
                     <div class="f4 mt0 mb2 tc">
                         Edit:
