--- a/index.html
+++ b/index.html
@@ -28,18 +28,32 @@
             <line x1="50" y1="50" x2="1000" y2="1000" stroke="black" stroke-width="1" />
         </svg> -->
         <section id="hit">
-            <div class="w-20 cf">
-                <div class="fl mb3 tc f3 ">
-                    <button @click="prev_hit" class="mid-gray br-100 pa1 bw0 bg-near-white pointer prev-next-btns">&nbsp;&lt;&nbsp;</button>
+            <div class="cf mt1">
+                <div class="fl mb3 tc f3 w-20 mt1">
+                    <button @click="go_to_hit(current_hit - 1)" class="mid-gray br-100 pa1 bw0 bg-near-white pointer prev-next-btns">&nbsp;&lt;&nbsp;</button>
                     Hit <span>{{current_hit}}</span> / <span>{{total_hits}}&nbsp;</span>
-                    <button @click="next_hit" class="mid-gray br-100 pa1 bw0 bg-near-white pointer prev-next-btns">&nbsp;&gt;&nbsp;</button>
+                    <button @click="go_to_hit(current_hit + 1)" class="mid-gray br-100 pa1 bw0 bg-near-white pointer prev-next-btns">&nbsp;&gt;&nbsp;</button>
+                </div>
+                <div class="fr mr3">
+                    <div>
+                        <span v-for="n in (total_hits / 2)" v-bind:id="'circle-' + n" @click="go_to_hit_circle(n, $event)" class="circle pointer"><span class="tooltiptext">{{n}}</span></span>
+                    </div>
+                    <div class="mt2">
+                        <span v-for="n in (total_hits / 2)" v-bind:id="'circle-' + (n + (total_hits / 2))" @click="go_to_hit_circle(n + (total_hits / 2), $event)" class="circle pointer"><span class="tooltiptext">{{n + (total_hits / 2)}}</span></span>
+                    </div>
                 </div>
             </div>
             <div>
                 <div class="ba b--black-80 br2 pa2">
-                    <p class="f3 mt1 mb1">
-                        <span class="f5">Original Sentence (Human Written):</span>
-                    </p>
+                    <div class="cf">
+                        <p class="fl f3 mt1 mb1">
+                            <span class="f5">Original Sentence (Human Written):</span>
+                        </p>
+                        <div class="fr">
+                            <i class="fa-regular fa-bookmark fa-lg pointer"></i>
+                        </div>
+                    </div>
+                    
                     <component :is="compiled_original_html"></component>
                     <!-- <div class="f4 lh-copy" v-html="original_html"></div> -->
                     <p class="f3 mb1">
@@ -106,18 +120,23 @@
                                 </div>
 
                                 <div class="span-selection-div" data-category="substitution">
-                                    <p class="mt0 mb2 b tracked-light">Select the text span from the <i>Original Sentence</i>.
+                                    <p class="mt0 mb2 b tracked-light">Select or click the text span from the <i>Original Sentence</i>.
                                     </p>
                                     <p class="tracked-light">Selected span: <span class="bg-substitution-light">{{selected_span_in_original}}</span></p>
                                     <div class="">
-                                        <p class="mb2 b tracked-light">Select the substitution span from the <i>Simplified Sentence</i>.
+                                        <p class="mb2 b tracked-light">Select or click the substitution span from the <i>Simplified Sentence</i>.
                                         </p>
                                         <p class="tracked-light">Selected span: <span class="bg-substitution-light">{{selected_span_in_simplified}}</span></p>
                                     </div>
                                 </div>  
 
                                 <div class="span-selection-div" data-category="split">
-                                    <p class="mt0 mb2 b tracked-light">Select the punctuation that ending the sentence from <i>Simplified Sentence</i>.
+                                    <p class="mt0 mb2 b tracked-light">Click a split sign <i class="fa-solid fa-grip-lines-vertical fa-lg txt-split"></i> : <span class="txt-split">{{selected_split}}</span>
+                                    </p>
+                                    <p class=" mb2 b tracked-light">Select or click the text span from the <i>Original Sentence</i> that corresponds to this split edit.
+                                    </p>
+                                    <p class="tracked-light">Selected span: <span class="bg-split-light">{{selected_span_in_original}}</span></p>
+                                    <p class="mt0 mb2 b tracked-light">Select or click the text span from the <i>Simplified Sentence</i> that corresponds to this split edit.
                                     </p>
                                     <p class="tracked-light">Selected span: <span class="bg-split-light">{{selected_span_in_simplified}}</span></p>
                                 </div>
@@ -131,7 +150,7 @@
                         <!-- disable  -->
                         <div class="buttons tc mt2">
                             <button @click="cancel_click" class="cancel-button b quality_button bw0 ba mr2 br-pill-ns grow" type="button">Cancel <i class="fa-solid fa-close"></i></button>
-                            <button @click="save_click" class="confirm-button b quality_button bw0 ba ml2 br-pill-ns o-40" type="button" disabled>Save <i class="fa-solid fa-check"></i></button>
+                            <button @click="save_click" class="confirm-button b quality_button bw0 ba ml2 br-pill-ns grow" type="button">Save <i class="fa-solid fa-check"></i></button>
                         </div>
                     </div>
                 </div>
@@ -528,7 +547,7 @@
                     </div>
                 </div>
 
-                <div class="quality-selection w-100 active" data-category="split">
+                <div class="quality-selection w-100" data-category="split">
                     <p class="f3 courier ttu mv1">Annotating an Edit <i class="fa-solid fa-pencil"></i></p>
                     <div class="f4 mt0 mb2 tc">
                         Edit:
