update version 5.4 add bookmark

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <span class="f5">Original Sentence (Human Written):</span>
                         </p>
                         <div class="fr">
-                            <i class="fa-regular fa-bookmark fa-lg pointer"></i>
+                            <i @click="bookmark_this_hit" class="bookmark fa-regular fa-bookmark fa-lg pointer"></i>
                         </div>
                     </div>
                     
